<resources>
    <string name="app_name">Pokemon app</string>
    <string name="login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="second_type_pokemon">Second type pokemon</string>
    <string name="first_type_pokemon">First type pokemon</string>
    <string name="name_pokemon">Name pokemon</string>
    <string name="home">Home</string>
    <string name="list">List</string>
    <string name="settings">Settings</string>
    <string name="delete">DELETE</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="checkbox_login">Remember me</string>
    <string name="logout">Logout</string>
    <!-- Preference Titles -->
    <string name="lenguage">Lenguage</string>
    <string name="select_lenguages">English</string>



</resources>
